--- a/app/src/main/res/layout/subject_one.xml
+++ b/app/src/main/res/layout/subject_one.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,5 +14,7 @@
         android:textSize="30sp"
         android:textColor="#9F00FF"
         android:layout_centerInParent = "true"/>
+
+    </FrameLayout>
 
 </RelativeLayout>
