--- a/app/src/main/res/layout/subject_one.xml
+++ b/app/src/main/res/layout/subject_one.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/subone"
+    <ListView
+        android:id="@+id/suboneList"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/first"
-        android:layout_gravity="center"
-        android:textSize="30sp"
-        android:textColor="#9F00FF"
-        android:layout_centerInParent = "true"/>
 
-    </FrameLayout>
+    </ListView>
 
-</RelativeLayout>
+</LinearLayout>
