--- a/app/src/main/res/layout/subject_one.xml
+++ b/app/src/main/res/layout/subject_one.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,45 +10,46 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_differentiation"
+        android:id="@+id/checkbox1"
         android:text="Differentiation">
     </CheckBox>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_integration"
+        android:id="@+id/checkbox2"
         android:text="Integration"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_applications"
+        android:id="@+id/checkbox3"
         android:text="Calculus Application"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_relationfunction"
+        android:id="@+id/checkbox4"
         android:text="Relation and Function"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_vectors"
+        android:id="@+id/checkbox5"
         android:text="Vectors"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_trigonometry"
+        android:id="@+id/checkbox6"
         android:text="Calculus" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/check_sets"
+        android:id="@+id/checkbox7"
         android:text="Sets" />
 
 
 </LinearLayout>
+</layout>
